# uav_simulator

./: .gitignore  .gitmodules  .tavis.yml  Dockerfile  License  Makefile  README.md  docker_release.sh  docker_run.sh  requirements.txt
scripts/: control.py  estimator.py  gui.glade  gui.py  main.py  matrix_utils.py  plot_utils.py  rover.py  thread_control.py  thread_gps.py  thread_imu.py  thread_log.py  trajectory.py
src/fdcl_uav/: package.xml  setup.cfg  setup.py
src/fdcl_uav/fdcl_uav/: control.py  estimator.py  freq_utils.py  gui.py  integral_utils.py  matrix_utils.py  trajectory.py
src/fdcl_uav/launch/: fdcl_uav_launch.py
src/uav_gazebo/: CMakeLists.txt  model.config  package.xml
src/uav_gazebo/launch/: simple_world.launch  uav_gazebo.launch.py
src/uav_gazebo/msg/: DesiredData.msg  ErrorData.msg  ModeData.msg  StateData.msg
src/uav_gazebo/urdf/: uav.gazebo  uav.urdf.xacro  uav.xacro
src/uav_gazebo/worlds/: simple.world
src/uav_plugins/: CMakeLists.txt  package.xml
src/uav_plugins/include/fdcl/: common_types.hpp  matrix_utils.hpp  ros_utils.hpp
src/uav_plugins/src/: control_plugin.cpp  fdcl_matrix_utils.cpp  fdcl_ros_utils.cpp  uav_control_plugin.cpp
tests/: test_matrix_utils.py
