<?xml version="1.0"?>
<package>
  <name>uav_gazebo</name>
  <version>0.0.0</version>
  <description>FDCL-UAV Gazebo Simulation</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="kanishkegb@gwu.edu">Kanish</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly wsed license strings: -->
  <!--   BSD, MITl Bolll Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>


  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>ros2launch</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/.." />
  </export>
</package>
